--- a/assets/style.css
+++ b/assets/style.css
@@ -44,8 +44,8 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url('images/mic.jpg');
-  background-position: center;
+  background-image: url('images/mic-darker.jpg');
+
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -70,6 +70,10 @@ ul {
   margin: 40px;
   font-size: 2em;
   text-align: center;
+}
+
+.subtitle {
+  font-size: 1.2em;
 }
 .intro-text {
   -webkit-font-smoothing: antialiased;
@@ -151,6 +155,9 @@ ul {
 @media (min-width: 768px) {
   .port-btns .btn {
       flex: 1 1 50%;
+  }
+  .subtitle {
+    font-size: 1.7em;
   }
  }
 
