--- a/assets/style.css
+++ b/assets/style.css
@@ -255,7 +255,10 @@ a.btn.disabled {
   border-radius: 10px;
   padding: 10px;
   margin: 20px auto; }
-
+iframe {
+  width:80%;
+  height:auto;
+}
 .contact-form {
   max-width: 90%;
   margin: 40px auto 80px auto;
@@ -324,6 +327,10 @@ a.btn.disabled {
   }
   .contact-form {
     max-width: 70%;
+  }
+  iframe {
+    width:560px;
+    height:315px;
   }
  }
 
